# daisy

./: .example.env  .gitignore  01_get_videos.py  02_to_txt.py  03_download_videos.py  04_get_utterances.py  05_extract_and_filter.py  06_final_filter.py  API.md  LEGAL.md  LICENSE.txt  README.md  create_figures.py  create_flower.py  create_table.py  data_summary.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
scripts/: 01_collect_media_sources.py  02_collect_audio_items.py  03_filter_audio_items.py  04_sample_audio_items.py  05_download_samples.py  06_convert_to_utterances.py
scripts/figures/: README.md  analyze_speaker_similarity.py  create_figures.py  create_flower.py  create_table.py  data_summary.md  run_all.py  utils.py
src/daisy/: __init__.py  abstract.py  audio_sources.py  downloaders.py  filter_results.py  media_sources.py  sample_results.py
src/daisy/asr/: __init__.py
src/daisy/config/: languages.json
src/daisy/core/: __init__.py  base.py  constants.py  models.py
src/daisy/data/: languages.json
src/daisy/download/: __init__.py
src/daisy/processing/: __init__.py  diarization.py  filtering.py  sampling.py  utterances.py
src/daisy/sources/audio/: __init__.py  bilibili.py  youtube.py
src/daisy/sources/media/: __init__.py  llm_sources.py
src/daisy/utils/: __init__.py  audio_processing.py  retry.py
tests/: __init__.py  test_basic.py
