[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daisy"
dynamic = ["version"]
description = "A diverse and multilingual speech dataset for evaluation of speech models"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["speech", "dataset", "multilingual", "evaluation", "audio", "machine-learning"]
authors = [
  { name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "humanhash3>=0.0.6",
  "yt-dlp>=2025.9.26",
  "selenium>=4.36.0",
  "dateparser>=1.2.0",
  "openai>=2.1.0",
  "pydantic>=2.11.0",
  "matplotlib>=3.9.3",
  "seaborn>=0.13.2",
  "fasttext>=0.9.2",
  "huggingface_hub>=0.26.0",
  "rich>=13.0.0",
  "python-dotenv>=1.0.0",
  "soundfile>=0.12.0",
  "torchaudio>=2.0.0",
  "numpy>=1.20.0",
  "pydantic>=2.11.0",
]

[project.urls]
Documentation = "https://github.com/Christoph-Minixhofer/daisy#readme"
Issues = "https://github.com/Christoph-Minixhofer/daisy/issues"
Source = "https://github.com/Christoph-Minixhofer/daisy"

[tool.hatch.version]
path = "src/daisy/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/daisy tests}"
[tool.hatch.envs.test]
dependencies = [
  "pytest>=7.0.0",
  "pytest-mock>=3.10.0",
  "pytest-cov>=4.0.0",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/daisy --cov-report=term-missing {args:tests}"

[tool.coverage.run]
source_pkgs = ["daisy", "tests"]
branch = true
parallel = true
omit = [
  "src/daisy/__about__.py",
]

[tool.coverage.paths]
daisy = ["src/daisy", "*/daisy/src/daisy"]
tests = ["tests", "*/daisy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
